--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": [ "index.js" ],
+            "js": [ "content_script.js" ],
             "run_at": "document_end"
         }
     ]
