--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "Ignore Video Click",
+    "name": "Ignore Video Clicks",
     "description": "Ignores clicks on video.",
     "version": "1",
     "author": "Sen Palanisami",
