--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,12 @@
     "description": "Ignores clicks on video.",
     "version": "1.0",
     "author": "Sen Palanisami",
+    "icons": {
+        "16": "icon16.png",
+        "32": "icon32.png",
+        "128": "icon128.png",
+        "512": "icon512.png"
+    },
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
