--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,11 @@
             "js": [ "content_script.js" ],
             "run_at": "document_end"
         }
+    ],
+    "background": {
+        "scripts": ["background.js"]
+    },
+    "permissions": [
+        "*://*/*", "tabs", "webNavigation"
     ]
 }
